flux/apps/landing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
  namespace: mimsy
  labels:
    app: landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      namespace: mimsy
      labels:
        app: landing
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: landing
          image: ghcr.io/mimsy-cms/landing:20250721-130449-6add6a4 # {"$imagepolicy": "mimsy:landing"}
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  strategy:
    type: RollingUpdate
