flux/apps/landing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-ingress
  namespace: mimsy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mimsy.kodai.ch
      secretName: mimsy-kodai-ch-ingress-tls
  rules:
    - host: mimsy.kodai.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  name: http
